[package]
name = "factory"
version = "0.1.0"
description = "Flexible parallel build pipeline"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
repository = "https://github.com/Dentosal/factory"

categories = ["development-tools::build-utils"]
keywords = ["build", "build-system", "python"]

publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

pyo3 = "0.8.3"

num_cpus = "1.10.1"
crossbeam-channel = "0.3"

terminal_size = "0.1.8"
indicatif = "0.13"

structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

log = "0.4"
pretty_env_logger = "0.3"
